<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="device_title">Realme Settings</string>
    <string name="device_summary">Adjust Realme specific device settings</string>
    <string name="display_title">Display</string>
    <string name="misc_title">Misc settings</string>
    <string name="doze_panel_title">Doze</string>

    <!-- Charging -->
    <string name="smart_charging_main_title">Battery</string>
    <string name="smart_charging_title">Smart charging</string>
    <string name="smart_charging_summary">Protect device battery from over charging</string>
    <string name="smart_charging_limit">Select charging limit</string>
    <string name="reset_stats_title">Reset battery stats</string>
    <string name="reset_stats_summary">Battery stats will get reset when charging limit is reached</string>
    <!-- DC dimming -->
    <string name="dc_mode_summary">Reduces screen flicker while brightness is low</string>
    <string name="dc_mode_title">DC-Dimming</string>
    <string name="tile_dc_mode">DC-Dimming</string>
    <!-- HBM mode -->
    <string name="hbm_mode_summary">Peak brightness for better visibility in outdoors</string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="tile_hbm_mode">High brightness modes</string>
    <!-- srgb mode -->
    <string name="srgb_mode_summary">sRGB mode for simpler colour display</string>
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="tile_srgb_mode">sRGB</string>
    <!-- otg mode -->
    <string name="otg_mode_summary">Enable USB-OTG power supply for external headphones and flash drives</string>
    <string name="otg_mode_title">Enable USB-OTG</string>
    <string name="tile_otg_mode">Enable USB-OTG</string>
    <!-- game mode -->
    <string name="game_mode_summary">Boost Touch Sampling Rate</string>
    <string name="game_mode_title">Game mode</string>
    <string name="tile_game_mode">game mode</string>
    <!-- Log Tile -->
    <string name="quick_settings_log_tile_label">Logs</string>
    <string name="quick_settings_log_tile_dialog_title">Options</string>
    <string name="cannot_get_su">Action failed because of missing superuser access</string>
</resources>
